crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_bodiless_companion_object.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class MarkerCompanion {
  companion object
}

class PrivateMarkerCompanion {
  private companion object

  fun following() {}
}

diagnostics:
(none)
