crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_bracketed_multi_annotations.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
annotation class FirstAnnotation

annotation class SecondAnnotation

@[FirstAnnotation]
fun annotated() {}

@field:[FirstAnnotation SecondAnnotation]
val value = 1

diagnostics:
(none)
