crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_call_explicit_context_argument_names.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun explicitContextArgumentNames() {
  render(user = currentUser, theme = darkTheme, content = { "ready" })
}

diagnostics:
(none)
