crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_call_explicit_receiver_and_super_forms.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
open class Base {
  open fun call(value: String) {}
}

class Derived
  : Base() {
  override fun call(value: String) {
    this.call(value = value.trim())
    super.call(value)
  }
}

diagnostics:
(none)
