crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_call_infix_functions_and_soft_keywords.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun infixCalls(bits: Bits, mask: Bits): Bits {
  val combined = bits or mask and Bits.Enabled
  val readable = bits and mask or Bits.Enabled
  val rightOperand = bits context (mask + Bits.Enabled)
  val leftOperand = (bits + mask) context Bits.Enabled
  val named = combined context mask
  return named
}

diagnostics:
(none)
