crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_call_named_spread_and_vararg_arguments.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun callArguments(items: Array<String>) {
  target(
    first = "one",
    second = compute(),
    *items,
    last = true,
  )
}

diagnostics:
(none)
