crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_call_trailing_and_parenthesized_lambdas.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun trailing(values: List<Int>) {
  values.map { it + 1 }
    .filter({ value -> value > 2 })
    .fold(0) { acc, value -> acc + value }
}

class Cached<T>(private val init: (Int) -> T) {
  init {
    require(true)
  }

  private val values = List(8) { init(it) }
}

diagnostics:
(none)
