crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_callable_reference_with_type_arguments.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun callableReferenceTypeArguments() {
  val generic = Box::create<String>
  val nested = Registry.Entry::from<Int>
  consume(generic, nested)
}

diagnostics:
(none)
