crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_class_data_value_and_sealed_headers.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
data class Payload(val bytes: ByteArray)

@JvmInline
value class UserId(val value: String)

sealed class Result

diagnostics:
(none)
